discussion/kv_engine/128645/128645_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Introduce PrometheusStatistics

Change-Id: I2c46729bb102d360dedc268b0fd26d935c654dcb

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-05-20 16:23:43.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-20 17:46:27.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2318/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10: error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
#include <prometheus/client_metric.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2318/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10:
error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2318/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24155/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/statistics/prometheus_collector.h:22:10:
fatal error: "prometheus/client_metric.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24155/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3797/ : FAILURE

Compile error at [2020-05-20T17:45:47.272Z] ../kv_engine/include/statistics/all_stats.h:123:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 211>::_Type {aka cb::stats::StatSpec [211]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3797/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3853/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/834/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
